apps/synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: synapse
  name: synapse
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: synapse
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: synapse-media
      labels:
        app.kubernetes.io/name: synapse
    spec:
      containers:
      - name: synapse
        image: matrixdotorg/synapse:v1.38.1
        livenessProbe:
          httpGet:
            path: /health
            port: 8008
        resources:
          requests:
            memory: "1024Mi"
            cpu: "500m"
          limits:
            memory: "1536Mi"
        volumeMounts:
        - name: config
          mountPath: /config
          readOnly: true
        - name: dbcreds
          mountPath: /dbcreds
          readOnly: true
        - name: synapse-media
          mountPath: /media
        - name: generated-config
          mountPath: /generated-config
      volumes:
      - name: dbcreds
        secret:
          secretName: synapse-pguser
      - name: config
        configMap:
          name: synapse-config
      - name: homeserver-config
        secret:
          secretName: synapse-homeserver-config
      - name: synapse-media
        persistentVolumeClaim:
          claimName: synapse-media
      - name: generated-config
        emptyDir: {}
