apps/synapse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - matrix.samcday.com
    secretName: synapse-tls
  rules:
  - host: matrix.samcday.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synapse
            port:
              number: 8008
